--- a/index.html
+++ b/index.html
@@ -27,16 +27,35 @@
     <!-- main -->
     <h2>Abstract</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium temporibus, sunt odio doloribus ea voluptas velit eos amet nobis, ipsa similique, cum vero magni porro atque deleniti earum aspernatur recusandae.</p>
+    <table>
+        <thead>
+            <tr>Nome</tr>
+            <tr>Peso in [gr.]</tr>
+            <tr>N° di atomi</tr>
+        </thead>
+        <tbody>
+            <tr><td>Litio</td>
+                <td></td>
+            </tr>
+            
+            
+        </tbody>
+    </table>
     <ol>
         <li>
             <h4>Introduction</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas itaque dolores necessitatibus, vel illo ullam, similique architecto ad recusandae in, fuga iste dolorum. At veniam saepe nostrum temporibus, ad officiis.</p>
         </li>
         <li>
+            <!-- esempio Immagine da internet -->
             <img src="" alt="paper diagram">
+            <!-- esempio immmagine locale -->
         </li>
     </ol>
     <!-- end main -->
+    <div>
+
+    </div>
     <!-- footer -->
     <!-- end footer -->
 </body>
